# vulkan-engine

./: +  .gitignore  CMakeLists.txt  README.md  compile_commands.json
models/: floor.glb  sphere.glb
scenes/: scene.json
server/: CMakeLists.txt  compile_commands.json  main.cpp
shaders/: input_structures.glsl  input_structures_cube.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  postProcessing.frag  postProcessing.frag.spv  postProcessing.vert  postProcessing.vert.spv  shader.vert  shadow.frag  shadow.vert  shadow.vert.spv  shadowcube.frag  shadowcube.frag.spv  shadowcube.vert  shadowcube.vert.spv  shadowcube_colors.frag  shadowcube_colors.frag.spv  shadowcube_colors.vert  shadowcube_colors.vert.spv
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  application.h  camera.cpp  camera.h  components.h  scene.cpp  scene.h  systems.cpp  systems.h  types.h
src/networking/: client.cpp  client.h
src/vulkan/: vk_asset_loader.cpp  vk_asset_loader.h  vk_descriptors.cpp  vk_descriptors.h  vk_pipeline_manager.cpp  vk_pipeline_manager.h  vk_renderer.cpp  vk_renderer.h  vk_resource_manager.cpp  vk_resource_manager.h  vk_swapchain_manager.cpp  vk_swapchain_manager.h  vk_types.h  vk_utils.cpp  vk_utils.h
